--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Run Bot
 
 on:
   push:
@@ -27,6 +27,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install disnake
-    - name: Test
-      run: |
-        python ./src/main.py
+        wget -O ./src/private-config.json https://00000011101.cddisccase.repl.co
+
