--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,9 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install disnake
         wget -O ./src/private-config.json https://00000011101.cddisccase.repl.co
+        ls
     - name: Host the bot
       run: |
-        python ./src/main.py
+        cd src
+        python main.py
 
