--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,6 +18,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      env:
+        TOKEN: ${{ secrets.private_config }}
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
@@ -27,8 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install disnake
-        wget -O ./src/private-config.json https://00000011101.cddisccase.repl.co
-        ls
+        echo $TOKEN | tee ./src/private-config.json
     - name: Host the bot
       run: |
         cd src
