--- a/.github/workflows/discord-bot.yml
+++ b/.github/workflows/discord-bot.yml
@@ -30,8 +30,17 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install disnake
         echo $TOKEN | tee ./src/private-config.json
+    - name: Get Current Job Log URL
+      uses: Tiryoh/gha-jobid-action@v0
+      id: jobs
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        job_name: ${{ github.job }}
+    - name: Output Current Job Log URL
+      run: echo ${{ steps.jobs.outputs.html_url }} | tee ./src/actions-job-id.txt
     - name: Host The Bot
       run: |
+        ls
         cd src
         echo Hosting Bot
         python main.py ${{ github.sha }} "${{ github.event.commits[0].message }}"
