--- a/.github/workflows/discord-bot.yml
+++ b/.github/workflows/discord-bot.yml
@@ -31,13 +31,12 @@ jobs:
         python -m pip install disnake
         echo $TOKEN | tee ./src/private-config.json
     - name: Get Current Job Log URL
-      uses: Tiryoh/gha-jobid-action@v0
-      id: jobs
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        job_name: ${{ github.job }}
-    - name: Output Current Job Log URL
-      run: echo ${{ steps.jobs.outputs.html_url }} | tee ./src/actions-job-id.txt
+      run:
+        curl -L \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/attempts/${GITHUB_RUN_ATTEMPT}/jobs | jq .jobs[].id
     - name: Host The Bot
       run: |
         
