--- a/.github/workflows/discord-bot.yml
+++ b/.github/workflows/discord-bot.yml
@@ -30,13 +30,15 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install disnake
         echo $TOKEN | tee ./src/private-config.json
-    - name: Get Current Job Log URL
-      run:
-        curl -L \
-        -H "Accept: application/vnd.github+json" \
-        -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
-        -H "X-GitHub-Api-Version: 2022-11-28" \
-        https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/attempts/${GITHUB_RUN_ATTEMPT}/jobs | jq .jobs[].id
+    - name: GitHub Actions job_id parser
+      uses: Tiryoh/gha-jobid-action@v0.1.2
+      id: jobs
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        job_name: ${{ github.job }}
+
+    - name: Output Current Job Log URL
+      run: echo ${{ steps.jobs.outputs.html_url }}
     - name: Host The Bot
       run: |
         
