--- a/.github/workflows/discord-bot.yml
+++ b/.github/workflows/discord-bot.yml
@@ -39,14 +39,14 @@ jobs:
         job_name: ${{ github.job }}
 
     - name: Output Current Job Log URL
-      run: echo ${{ steps.jobs.outputs.html_url }}
+      run: echo ${{ steps.jobs.outputs.html_url }} | tee ./src/actions_job_id.txt
     - name: Host The Bot
       run: |
         
         cd src
         ls
         echo Hosting Bot
-        python main.py ${{ github.sha }} "${{ github.event.commits[0].message }}"
+        python main.py ${{ github.sha }} "${{ github.event.commits[0].message }}" "${{ secrets.GITHUB_TOKEN }}"" ${GITHUB_REPOSITORY} ${GITHUB_RUN_ID} "${{ github.repository }}"
         echo Bot Killed
         echo Stopping Action
 
